--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                     <div class="alert alert-info" style="margin: var(--spacing-md) 0;">
                         <strong>Best for:</strong> General inquiries, support requests, feedback, and collaboration opportunities.
                     </div>
-                    <a href="https://forms.google.com" target="_blank" class="btn btn-primary">Open Contact Form →</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1FdyWURC0owjNPoNpjEnCjvBdxqcxBv75feD15Q4Sg4F9yg/viewform?usp=publish-editor" target="_blank" class="btn btn-primary">Open Contact Form →</a>
                 </div>
 
                 <div class="content-card">
